Fix black screen animation
Instead of having the screen fade in, slide in from off screen to allow interaction on main page when mobile menu deactivated. Not sure how to get it to fade in without using display: none property

Automatically disable screen with display: none on tablet view if user doesn't close menu animation

--- a/index.css
+++ b/index.css
@@ -209,11 +209,13 @@ button.nav-close img {
     width: 200%;
     top: 0;
     opacity: 0;
+    transform: translateX(-100%);
     margin-left: -200px;
     transition: ease 500ms;
 }    
 
 .show {
+    transform: translateX(0);
     opacity: 0.5;
 }
 
@@ -422,6 +424,10 @@ aside a {
     }
 
     .menu-expanded {
+        display: none;
+    }
+
+    .screen {
         display: none;
     }
 
